# wdb_transfer

./: Cargo.toml  README.md  build.rs
.github/scripts/: windows-build.bat
.github/workflows/: windows.yml
resources/: sign.js  wdb_transfer-manifest.rc  wdb_transfer.exe.manifest
src/: main.rs  main_cli.rs
src/about_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs
src/app_window/: controls.rs  events.rs  layout.rs  mod.rs  nui.rs  window.rs
src/common/: labels.rs  load_tables_from_db.rs  load_tables_from_file.rs  mod.rs  run_export.rs  run_import.rs  table_with_rows_count.rs  table_with_size.rs  tds_conn_config.rs  transfer_error.rs  zip_dir.rs
src/common_gui/: mod.rs  table_with_rows_count.rs  table_with_size.rs
src/connect_check_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/connect_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/export_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/import_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/load_dbnames_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
src/load_tables_dialog/: args.rs  controls.rs  dialog.rs  events.rs  layout.rs  mod.rs  nui.rs  result.rs
