[package]
name = "wdb_transfer"
version = "1.2.0"
authors = ["alex@wiltondb.com"]
edition = "2018"

[build-dependencies]
embed-resource = "1.8"

[dependencies]
chrono = "0.4.30"
clipboard-win = "4.5.0"
duct = "0.13.6"
flate2 = { version = "1.0.28", features = ["zlib"], default-features = false }
human_bytes = "0.4.3"
native-tls = "0.2.11"
nwg = { version = "1.0.12", package = "native-windows-gui", features = ["all", "flexbox"] }
nwg_ui = "1.0.1"
regex = "1.10.3"
tiberius = { version = "0.12.2", features = ["sql-browser-tokio"], default-features = true }
tokio = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
wildmatch = "2.1.1"
winapi = { version = "0.3", features = ["winuser"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate-zlib"] }
zip_recurse = "1.0.1"
zstd = { version = "0.13.1", features = ["zstdmt"], default-features = false }
